feat: :sparkles: endpoint productos creado
aun puedo mejorar el codigo para hacer la consulta más versatil

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pruebagbp",
   "version": "1.0.0",
-  "description": "",
+  "description": "**¿Cómo inicializar el proyecto?**",
   "main": "server.js",
   "type": "module",
   "scripts": {
