feat: :sparkles: Punto 7
post para productos, creando asi dos inserts, en productos para el 'nombre' y 'created_by'  e inventarios para 'id_bodega',etc

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --quiet server.js",
+    "dev": "nodemon --quiet sever.js",
     "start": "node server.js"
   },
   "keywords": [],
